--- a/datri_lombardi_maiello.Rmd
+++ b/datri_lombardi_maiello.Rmd
@@ -2,7 +2,12 @@
 title: "Analisi di Clustering sul Dataset Banknote"
 author: "Nome Cognome"
 date: "`r Sys.Date()`"
-output: html_document
+output:
+  pdf_document: default
+  html_document: default
+editor_options:
+  markdown:
+    wrap: 72
 ---
 
 ```{r setup, include=FALSE}
@@ -12,32 +17,56 @@ knitr::opts_chunk$set(echo = TRUE)
 # Introduzione
 
 ## Obiettivo del Progetto
-Il presente progetto si propone di applicare diverse tecniche di clustering al dataset **banknote** al fine di identificare gruppi omogenei presenti nei dati e confrontare l'efficacia dei vari metodi. L'analisi intende mettere in pratica le metodologie apprese nel modulo di Data Science, offrendo una panoramica completa e comparativa delle tecniche di clustering.
+
+Il presente progetto si propone di applicare diverse tecniche di
+clustering al dataset **banknote** al fine di identificare gruppi
+omogenei presenti nei dati e confrontare l'efficacia dei vari metodi.
+L'analisi intende mettere in pratica le metodologie apprese nel modulo
+di Data Science, offrendo una panoramica completa e comparativa delle
+tecniche di clustering.
 
 ## Contesto e Motivazione
-Questo lavoro rientra in un modulo dedicato al clustering, che ha trattato argomenti quali:
-- **Clustering Gerarchico Agglomerativo**
-- **Clustering Partizionale (K-means e K-medoids)**
-- **Clustering Model-based (Mixture of Gaussian, modelli parsimoniosi e mixture of regressions)**
-- **Validazione del Clustering**
 
-Il dataset **banknote** rappresenta un caso di studio interessante per valutare come ciascun approccio possa evidenziare strutture nascoste nei dati e per esaminare criticamente i risultati ottenuti.
+Questo lavoro rientra in un modulo dedicato al clustering, che ha
+trattato argomenti quali: - **Clustering Gerarchico Agglomerativo** -
+**Clustering Partizionale (K-means e K-medoids)** - **Clustering
+Model-based (Mixture of Gaussian, modelli parsimoniosi e mixture of
+regressions)** - **Validazione del Clustering**
+
+Il dataset **banknote** rappresenta un caso di studio interessante per
+valutare come ciascun approccio possa evidenziare strutture nascoste nei
+dati e per esaminare criticamente i risultati ottenuti.
 
 ## Struttura del Documento
+
 Il documento è organizzato nei seguenti capitoli:
 
-1. **Introduzione**: Presentazione del progetto, degli obiettivi e del contesto.
-2. **Descrizione del Dataset e Analisi Esplorativa**: Esplorazione preliminare dei dati, analisi descrittiva e operazioni di preprocessing.
-3. **Applicazione delle Tecniche di Clustering**: Implementazione dei metodi di clustering (gerarchico, partizionale e model-based).
-4. **Validazione e Visualizzazione dei Risultati**: Confronto dei risultati mediante metriche di validazione e visualizzazione dei cluster (con l'ausilio della PCA).
-5. **Conclusioni e Sviluppi Futuri**: Sintesi dei risultati ottenuti e prospettive per ulteriori analisi.
-6. **Appendici**: Codice completo, grafici supplementari e riferimenti bibliografici.
+1.  **Introduzione**: Presentazione del progetto, degli obiettivi e del
+    contesto.
+2.  **Descrizione del Dataset e Analisi Esplorativa**: Esplorazione
+    preliminare dei dati, analisi descrittiva e operazioni di
+    preprocessing.
+3.  **Applicazione delle Tecniche di Clustering**: Implementazione dei
+    metodi di clustering (gerarchico, partizionale e model-based).
+4.  **Validazione e Visualizzazione dei Risultati**: Confronto dei
+    risultati mediante metriche di validazione e visualizzazione dei
+    cluster (con l'ausilio della PCA).
+5.  **Conclusioni e Sviluppi Futuri**: Sintesi dei risultati ottenuti e
+    prospettive per ulteriori analisi.
+6.  **Appendici**: Codice completo, grafici supplementari e riferimenti
+    bibliografici.
 
-In questo documento verranno inclusi i blocchi di codice R, commentati e spiegati dettagliatamente, per permettere una replicazione completa dell'analisi e una comprensione approfondita delle tecniche applicate.
+In questo documento verranno inclusi i blocchi di codice R, commentati e
+spiegati dettagliatamente, per permettere una replicazione completa
+dell'analisi e una comprensione approfondita delle tecniche applicate.
 
 # Descrizione del Dataset e Analisi Esplorativa
 
-In questa sezione esamineremo il dataset **banknote** per comprenderne la struttura, le caratteristiche e le relazioni tra le variabili. Il dataset proviene dal pacchetto `mclust` e contiene misure che possono essere utilizzate per distinguere tra banconote autentiche e false (o per altri scopi diagnostici).
+In questa sezione esamineremo il dataset **banknote** per comprenderne
+la struttura, le caratteristiche e le relazioni tra le variabili. Il
+dataset proviene dal pacchetto `mclust` e contiene misure che possono
+essere utilizzate per distinguere tra banconote autentiche e false (o
+per altri scopi diagnostici).
 
 ## Caricamento del Dataset
 
@@ -58,12 +87,13 @@ summary(banknote)
 
 ```
 
-
 ## Analisi Esplorativa dei Dati (EDA)
 
 ### Matrice di Scatterplot
 
-Per avere una prima idea delle relazioni tra le variabili, creiamo una matrice di scatterplot. Se nel dataset è presente una variabile di classe (ad esempio class), possiamo utilizzarla per colorare i punti.
+Per avere una prima idea delle relazioni tra le variabili, creiamo una
+matrice di scatterplot. Se nel dataset è presente una variabile di
+classe (ad esempio class), possiamo utilizzarla per colorare i punti.
 
 ```{r}
 # Se esiste una colonna "class", usiamola per colorare i dati
@@ -75,17 +105,22 @@ if("Status" %in% names(banknote)){
 }
 
 ```
+
 TODO: Commento:
 
-    Analizza eventuali pattern o raggruppamenti evidenti nei grafici.
+```         
+Analizza eventuali pattern o raggruppamenti evidenti nei grafici.
 
-    Commenta su come alcune coppie di variabili sembrano essere correlate o meno.
+Commenta su come alcune coppie di variabili sembrano essere correlate o meno.
 
-    Se esiste la variabile di classe, valuta se le osservazioni appartengono a gruppi distinti già visibili.
+Se esiste la variabile di classe, valuta se le osservazioni appartengono a gruppi distinti già visibili.
+```
 
 ### Analisi delle Correlazioni
 
-Verifichiamo le correlazioni tra le variabili numeriche per capire se esistono relazioni forti che potrebbero influenzare l'analisi di clustering.
+Verifichiamo le correlazioni tra le variabili numeriche per capire se
+esistono relazioni forti che potrebbero influenzare l'analisi di
+clustering.
 
 ```{r}
 # Supponendo che le prime 4 colonne siano le variabili quantitative
@@ -106,15 +141,18 @@ theme(axis.text.x = element_text(angle = 45, hjust = 1))
 
 TODO: Commento:
 
-    Osserva i valori di correlazione per identificare variabili fortemente correlate (positivamente o negativamente).
+```         
+Osserva i valori di correlazione per identificare variabili fortemente correlate (positivamente o negativamente).
 
-    Discuti l’impatto di eventuali correlazioni elevate: potrebbero ridondare in informazioni e influenzare il clustering.
+Discuti l’impatto di eventuali correlazioni elevate: potrebbero ridondare in informazioni e influenzare il clustering.
 
-    Se trovi correlazioni elevate, suggerisci che una riduzione della dimensionalità (es. tramite PCA) potrebbe aiutare.
+Se trovi correlazioni elevate, suggerisci che una riduzione della dimensionalità (es. tramite PCA) potrebbe aiutare.
+```
 
 ### Distribuzione delle Variabili
 
-Infine, esaminiamo la distribuzione di ciascuna variabile con degli istogrammi:
+Infine, esaminiamo la distribuzione di ciascuna variabile con degli
+istogrammi:
 
 ```{r}
 # Impostiamo un layout per visualizzare gli istogrammi
@@ -126,33 +164,49 @@ for(i in 2:7){
 par(mfrow = c(1, 1))  # Ripristiniamo il layout originale
 
 ```
-TODO:
-Commento:
 
-    Descrivi la forma delle distribuzioni: simmetriche, asimmetriche (skewed), unimodali o multimodali.
+TODO: Commento:
 
-    Nota eventuali outlier o code lunghe che potrebbero influenzare la successiva analisi di clustering.
+```         
+Descrivi la forma delle distribuzioni: simmetriche, asimmetriche (skewed), unimodali o multimodali.
 
-    Confronta le distribuzioni tra le variabili per capire se alcune variabili hanno una variabilità molto diversa, che potrebbe richiedere una normalizzazione/scaling.
-    
-    
+Nota eventuali outlier o code lunghe che potrebbero influenzare la successiva analisi di clustering.
 
-Questa sezione fornisce una panoramica iniziale del dataset banknote, evidenziando la struttura, le principali statistiche descrittive e le relazioni tra le variabili. Queste informazioni sono fondamentali per orientare le successive fasi di clustering e per capire eventuali necessità di preprocessing (ad es. scaling o trasformazioni) prima dell'applicazione dei metodi di clustering.
+Confronta le distribuzioni tra le variabili per capire se alcune variabili hanno una variabilità molto diversa, che potrebbe richiedere una normalizzazione/scaling.
+```
 
+Questa sezione fornisce una panoramica iniziale del dataset banknote,
+evidenziando la struttura, le principali statistiche descrittive e le
+relazioni tra le variabili. Queste informazioni sono fondamentali per
+orientare le successive fasi di clustering e per capire eventuali
+necessità di preprocessing (ad es. scaling o trasformazioni) prima
+dell'applicazione dei metodi di clustering.
 
 ## 3.1 Clustering Gerarchico Agglomerativo
 
-Il **Clustering Gerarchico Agglomerativo (HAC)** è una tecnica di clustering che costruisce una gerarchia di cluster attraverso un approccio "bottom-up". Inizia considerando ogni punto dati come un cluster separato e, successivamente, unisce iterativamente i cluster più simili fino a formare un unico cluster che racchiude tutti i dati. Questo metodo non richiede la specifica del numero di cluster a priori e produce una rappresentazione ad albero, nota come **dendrogramma**, che facilita la visualizzazione delle relazioni tra i cluster.
+Il **Clustering Gerarchico Agglomerativo (HAC)** è una tecnica di
+clustering che costruisce una gerarchia di cluster attraverso un
+approccio "bottom-up". Inizia considerando ogni punto dati come un
+cluster separato e, successivamente, unisce iterativamente i cluster più
+simili fino a formare un unico cluster che racchiude tutti i dati.
+Questo metodo non richiede la specifica del numero di cluster a priori e
+produce una rappresentazione ad albero, nota come **dendrogramma**, che
+facilita la visualizzazione delle relazioni tra i cluster.
 
 ### Implementazione in R
 
-Per applicare il clustering gerarchico agglomerativo al nostro dataset, seguiamo questi passaggi:
+Per applicare il clustering gerarchico agglomerativo al nostro dataset,
+seguiamo questi passaggi:
 
-1. **Calcolo della Matrice di Distanza**: Determiniamo le distanze tra tutte le coppie di punti nel dataset. Una misura comune è la distanza euclidea.
+1.  **Calcolo della Matrice di Distanza**: Determiniamo le distanze tra
+    tutte le coppie di punti nel dataset. Una misura comune è la
+    distanza euclidea.
 
-2. **Costruzione del Dendrogramma**: Utilizziamo la funzione `hclust()` per eseguire il clustering gerarchico e generare il dendrogramma.
+2.  **Costruzione del Dendrogramma**: Utilizziamo la funzione `hclust()`
+    per eseguire il clustering gerarchico e generare il dendrogramma.
 
-3. **Taglio del Dendrogramma**: Decidiamo il numero ottimale di cluster tagliando il dendrogramma a un livello appropriato.
+3.  **Taglio del Dendrogramma**: Decidiamo il numero ottimale di cluster
+    tagliando il dendrogramma a un livello appropriato.
 
 ```{r hierarchical-clustering}
 
@@ -171,21 +225,128 @@ plot(clustering_hierarchico, main = "Dendrogramma del Clustering Gerarchico Aggl
 
 ### Interpretazione del Dendrogramma
 
-Il dendrogramma risultante mostra come i punti dati vengono uniti in cluster successivamente. L'altezza dei rami indica la distanza a cui avviene la fusione: rami più bassi corrispondono a fusioni tra punti o cluster molto simili. Analizzando il dendrogramma, possiamo decidere il numero di cluster tagliando l'albero a un'altezza che separa i gruppi in modo significativo.
-Vantaggi e Svantaggi del Clustering Gerarchico
+Il dendrogramma risultante mostra come i punti dati vengono uniti in
+cluster successivamente. L'altezza dei rami indica la distanza a cui
+avviene la fusione: rami più bassi corrispondono a fusioni tra punti o
+cluster molto simili. Analizzando il dendrogramma, possiamo decidere il
+numero di cluster tagliando l'albero a un'altezza che separa i gruppi in
+modo significativo. Vantaggi e Svantaggi del Clustering Gerarchico
 
 #### Vantaggi:
 
-    Non richiede la specifica del numero di cluster a priori.
+```         
+Non richiede la specifica del numero di cluster a priori.
 
-    Produce una rappresentazione gerarchica che può essere utile per comprendere le relazioni tra i dati.
+Produce una rappresentazione gerarchica che può essere utile per comprendere le relazioni tra i dati.
 
-    Adatto a dataset di piccole e medie dimensioni.
+Adatto a dataset di piccole e medie dimensioni.
+```
 
 #### Svantaggi:
 
-    Sensibile alla scelta della misura di distanza e del metodo di linkage.
+```         
+Sensibile alla scelta della misura di distanza e del metodo di linkage.
 
-    Può essere computazionalmente costoso per dataset di grandi dimensioni.
+Può essere computazionalmente costoso per dataset di grandi dimensioni.
 
-    Una volta effettuata una fusione, non è possibile separare i cluster, rendendo l'algoritmo meno flessibile in caso di errori.
+Una volta effettuata una fusione, non è possibile separare i cluster, rendendo l'algoritmo meno flessibile in caso di errori.
+```
+
+## 3.1.2 K-means
+
+In questo capitolo i cluster vengono creati utilizzando l'algoritmo k-means, dopo aver scalato le variabili numeriche del dataset.
+
+```{r}
+library(factoextra)
+df <- scale(banknote[2:7])
+```
+
+Successivamente si determina il numero ottimale di cluster da utilizzare nell'algoritmo, impiegando il metodo Elbow.
+
+```{r}
+fviz_nbclust(df, kmeans, method = "wss") +
+  geom_vline(xintercept = 4, linetype = 2)+
+  labs(subtitle = "Elbow method")
+```
+
+E il metodo Silhouette.
+
+```{r}
+fviz_nbclust(df, kmeans, method = "silhouette")+
+  labs(subtitle = "Silhouette method")
+```
+
+Il primo metodo indica quattro come numero ottimale di cluster, mentre il secondo ne suggerisce due. Poiché il dataset è composto da 200 osservazioni, equamente suddivise tra banconote autentiche e contraffatte, si sceglie di impostare il numero di cluster a due e si procede con l'esecuzione dell'algoritmo.
+
+Per prima cosa si osserva una matrice di grafici a dispersione, utile per analizzare le relazioni tra le variabili numeriche del dataset.
+
+```{r}
+set.seed(123)
+km.res <- kmeans(df, 2, nstart = 25)
+print(km.res)
+
+aggregate(banknote, by=list(cluster=km.res$cluster), mean)
+
+dd <- cbind(banknote, cluster = km.res$cluster)
+head(dd)
+
+km.res$cluster
+
+km.res$size
+
+km.res$centers
+
+cl <- km.res$cluster
+pairs(df, gap=0, pch=cl, col=c("red", "blue")[cl])
+```
+
+TODO: commentare
+
+Ora si analizza la distribuzione dei due cluster.
+
+```{r}
+fviz_cluster(km.res, 
+             data = df,
+             palette = c("red", "blue"),
+             ellipse.type = "euclid", 
+             star.plot = TRUE,
+             repel = TRUE,
+             ggtheme = theme_minimal()
+)
+```
+
+## 3.1.3 K-medoids
+
+In questo capitolo i cluster vengono creati utilizzando l'algoritmo k-medoids con k impostato a 2.
+
+Come in precedenza, si analizzano prima i grafici a dispersione e successivamente i due cluster.
+
+```{r}
+library(cluster)
+head(df, n = 3)
+
+pam.res <- pam(df, 2)
+print(pam.res)
+
+dd <- cbind(banknote, cluster = pam.res$cluster)
+head(dd, n = 8)
+
+pam.res$medoids
+
+head(pam.res$clustering)
+
+cl <- pam.res$clustering
+pairs(df, gap=0, pch=cl, col=c("#00AFBB", "#FC4E07")[cl])
+```
+
+Come previsto, i cluster risultano molto simili.
+
+```{r}
+fviz_cluster(pam.res,
+             palette = c("#00AFBB", "#FC4E07"),
+             ellipse.type = "t",
+             repel = TRUE,
+             ggtheme = theme_classic()
+)
+```
+
