--- a/datri_lombardi_maiello.Rmd
+++ b/datri_lombardi_maiello.Rmd
@@ -1,17 +1,20 @@
 ---
 title: "Analisi di Clustering sul Dataset Banknote"
-author: "Nome Cognome"
-date: "`r Sys.Date()`"
-output:
-  pdf_document: default
-  html_document: default
-editor_options:
-  markdown:
-    wrap: 72
+author: "D'Atri, Lombardi, Maiello"
+date: "`r format(Sys.Date(), '%d/%m/%Y')`"
+output: html_document
 ---
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
+knitr::opts_chunk$set(message=FALSE, warning=FALSE)
+
+packages <- c("mclust", "reshape2", "ggplot2", "GGally", "dplyr", "clustertend", "cluster", "FNN", "FactoMineR", "factoextra")
+
+for (pkg in packages) {
+    if (!requireNamespace(pkg, quietly = TRUE)) {
+        install.packages(pkg, repos = "https://cran.rstudio.com/")
+    }
+}
 ```
 
 # 1. Introduzione
@@ -37,54 +40,56 @@ Il documento è organizzato nei seguenti capitoli:
 # 2. Descrizione del Dataset e Analisi Esplorativa
 
 In questa sezione esamineremo il dataset **banknote** per comprenderne la struttura, le caratteristiche e le relazioni tra le variabili. Il dataset proviene dal pacchetto `mclust` e contiene misure che possono essere utilizzate per distinguere tra banconote autentiche e false (o per altri scopi diagnostici).
+Il dataset contiene le seguenti variabili:
+
+- Status: lo stato della banconota (autentica o contraffatta)
+
+- Length: lunghezza della banconota (mm)
+
+- Left: larghezza del bordo sinistro (mm)
+
+- Right: larghezza del bordo destro (mm)
+
+- Bottom: larghezza del margine inferiore (mm)
+
+- Top: larghezza del margine superiore (mm)
+
+- Diagonal: lunghezza della diagonale (mm)
 
 ## Caricamento del Dataset
 
-```{r load-data, message=FALSE, warning=FALSE}
-# Carichiamo il pacchetto mclust e il dataset banknote
+```{r load-data}
 library(mclust)
 data(banknote)
-
-# Visualizziamo le prime righe del dataset
-head(banknote)
-
-#Esplorazione della Struttura e Statistiche Descrittive
-# Esaminiamo la struttura del dataset
-str(banknote)
-
-# Visualizziamo un riepilogo statistico delle variabili
-summary(banknote)
-
 ```
+
+## Esplorazione della Struttura e Statistiche Descrittive del dataset
+Visualizziamo le prime righe del dataset
+
+```{r head}
+head(banknote)
+```
+
+Esaminiamo la struttura del dataset
+```{r str}
+str(banknote)
+```
+Il dataset è composto da 200 osservazioni e 7 variabili, tutte di tipo numerico ad eccezione di 'Status' che è una variabile binaria che può assumere uno tra i seguenti valori: 'counterfeit' e 'genuine'.
+
+Visualizziamo un riepilogo statistico delle variabili.
+
+```{r summary}
+summary(banknote)
+```
+Notiamo che la colonna 'Status' è perfettamente bilanciata.
+
+# Controllo valori mancanti
+```{r missing values}
+colSums(is.na(banknote))
+```
+Non c'è nessun valore mancante nelle colonne.
 
 ## Analisi Esplorativa dei Dati (EDA)
-
-### Matrice di Scatterplot
-
-Per avere una prima idea delle relazioni tra le variabili, creiamo una
-matrice di scatterplot. Se nel dataset è presente una variabile di
-classe (ad esempio class), possiamo utilizzarla per colorare i punti.
-
-```{r}
-# Se esiste una colonna "class", usiamola per colorare i dati
-if("Status" %in% names(banknote)){
-  pairs(banknote, col = banknote$Status, 
-        main = "Scatterplot Matrix del Dataset Banknote")
-} else {
-  pairs(banknote, main = "Scatterplot Matrix del Dataset Banknote")
-}
-
-```
-
-TODO: Commento:
-
-```         
-Analizza eventuali pattern o raggruppamenti evidenti nei grafici.
-
-Commenta su come alcune coppie di variabili sembrano essere correlate o meno.
-
-Se esiste la variabile di classe, valuta se le osservazioni appartengono a gruppi distinti già visibili.
-```
 
 ### Analisi delle Correlazioni
 
@@ -93,8 +98,7 @@ esistono relazioni forti che potrebbero influenzare l'analisi di
 clustering.
 
 ```{r}
-# Supponendo che le prime 4 colonne siano le variabili quantitative
-cor_matrix <- cor(banknote[, 2:7])
+cor_matrix <- cor(banknote[, -1])
 print(cor_matrix)
 library(reshape2)
 library(ggplot2)
@@ -111,7 +115,7 @@ theme(axis.text.x = element_text(angle = 45, hjust = 1))
 
 TODO: Commento:
 
-```         
+```
 Osserva i valori di correlazione per identificare variabili fortemente correlate (positivamente o negativamente).
 
 Discuti l’impatto di eventuali correlazioni elevate: potrebbero ridondare in informazioni e influenzare il clustering.
@@ -128,8 +132,8 @@ istogrammi:
 # Impostiamo un layout per visualizzare gli istogrammi
 par(mfrow = c(2, 2))
 for(i in 2:7){
-  hist(banknote[[i]], main = paste("Istogramma di", names(banknote)[i]),
-       xlab = names(banknote)[i], col = "lightblue", border = "white")
+    hist(banknote[[i]], main = paste("Istogramma di", names(banknote)[i]),
+    xlab = names(banknote)[i], col = "lightblue", border = "white")
 }
 par(mfrow = c(1, 1))  # Ripristiniamo il layout originale
 
@@ -137,7 +141,7 @@ par(mfrow = c(1, 1))  # Ripristiniamo il layout originale
 
 TODO: Commento:
 
-```         
+```
 Descrivi la forma delle distribuzioni: simmetriche, asimmetriche (skewed), unimodali o multimodali.
 
 Nota eventuali outlier o code lunghe che potrebbero influenzare la successiva analisi di clustering.
@@ -145,12 +149,150 @@ Nota eventuali outlier o code lunghe che potrebbero influenzare la successiva an
 Confronta le distribuzioni tra le variabili per capire se alcune variabili hanno una variabilità molto diversa, che potrebbe richiedere una normalizzazione/scaling.
 ```
 
+### Matrice di Scatterplot
+
+Per avere una prima idea delle relazioni tra le variabili, creiamo una matrice di scatterplot. Utilizziamo la colonna 'Status' per colorare i punti.
+
+```{r scatterplot}
+pairs(banknote, col = banknote$Status, main = "Scatterplot Matrix del Dataset Banknote")
+# library(GGally)
+# library(dplyr)
+
+# ggpairs(banknote, aes(color = as.factor(Status)))
+
+# ggpairs(
+#   banknote,
+#   aes(color = as.factor(Status))
+# ) + theme(plot.margin = margin(0, 0, 0, 0))
+```
+
+TODO: Commento:
+
+```
+Analizza eventuali pattern o raggruppamenti evidenti nei grafici.
+
+Commenta su come alcune coppie di variabili sembrano essere correlate o meno.
+
+Se esiste la variabile di classe, valuta se le osservazioni appartengono a gruppi distinti già visibili.
+```
+
+
 Questa sezione fornisce una panoramica iniziale del dataset banknote,
 evidenziando la struttura, le principali statistiche descrittive e le
 relazioni tra le variabili. Queste informazioni sono fondamentali per
 orientare le successive fasi di clustering e per capire eventuali
 necessità di preprocessing (ad es. scaling o trasformazioni) prima
 dell'applicazione dei metodi di clustering.
+
+## Metodi per valutare la tendenza del dataset ad essere clusterizzato
+Misure che aiutano a determinare se un dataset è adatto per il clustering, valutando quanto i dati siano distribuiti in modo casuale o contengano una struttura raggruppata.
+
+### Hopkins statistics
+La Hopkins Statistics è una misura che può assumere valori tra 0 e 1, più il valore è vicino allo 0 più il dataset ha una struttura clusterizzata (ossia presenta una buona separazione tra gruppi). Se assume un valore tra 0.5 o più significa che il dataset non presenta una struttura di gruppo significativa e probabilmente sono distribuiti con una distribuzione uniforme.
+```{r}
+library(clustertend)
+
+banknote_num <- banknote[, -1]
+
+set.seed(987)
+
+hopkins_stat <- hopkins(banknote_num, n = nrow(banknote_num) - 1)
+
+print(hopkins_stat)
+print(hopkins_stat$H)
+
+```
+
+### VAT
+produce una matrice di dissimilarità ordinata, va visto se si vanno a formare lungo la diagonale secondaria del grafico, dei blocchi rossi che rappresentano regioni di osservazioni che condividono una forte similarità
+
+```{r}
+#fviz_dist(dist(banknote), show_labels = FALSE) +
+```
+
+## PCA
+In questa sezione applichiamo la PCA sul dataset, considerando solo le colonne numeriche. Anche se le variabili sono tutte misurate in millimetri e quindi nella stessa scala, applichiamo comunque la standardizzazione per evitare che differenze nella dispersione (variabili con varianze maggiori) influenzino in modo sproporzionato i risultati della PCA.
+```{r}
+library("FactoMineR")
+library("factoextra")
+
+banknote_num <- banknote[, -1]
+head(banknote_num)
+pca_result <- PCA(banknote_num, graph = FALSE)
+```
+
+#### Visualizzazione e interpretazione dei risultati
+Estraiamo gli autovalori e calcoliamo sia la varianza spiegata per ciascuna componente che la varianza cumulativa. Queste informazioni ci serviranno per decidere il numero ottimale di componenti da mantenere.
+```{r}
+eigenvalues <- get_eigenvalue(pca_result)[,1]
+explained_variance <- eigenvalues / sum(eigenvalues)
+cumulative_variance <- cumsum(explained_variance)
+
+print(eigenvalues)
+print(explained_variance)
+print(cumulative_variance)
+```
+Abbiamo ora a disposizione gli autovalori e le informazioni sulla varianza, utili per valutare l'importanza di ciascuna componente principale.
+
+Utilizziamo la Kaiser Rule per selezionare le componenti con autovalori superiori a 1.
+```{r kaiser rule}
+kaiser_components <- sum(eigenvalues > 1)
+cat("Numero di componenti selezionati con la Kaiser rule:", kaiser_components, "\n")
+```
+Un ulteriore criterio è quello di selezionare il numero minimo di componenti che, sommando la varianza spiegata, raggiungono almeno l'80% del totale. In questo modo garantiamo una buona rappresentazione dei dati.
+```{r threshold}
+variance_threshold <- min(which(cumulative_variance >= 0.80))
+
+cat("Numero di componenti principali che spiegano l'80% della varianza comulativa:", variance_threshold, "\n")
+
+fviz_eig(pca_result, addlabels = TRUE, ylim = c(0, 50))
+```
+Nel grafico vediamo la varianza spiegata da ciascuna componente. Con le prime tre componenti principali riusciamo a spiegare l'84.9% della varianza cumulativa.
+
+Vediamo infine un ultimo metodo per scegliere il numero di componenti principali: il metodo dell'elbow.
+Mediante un grafico scree plot visualizziamo gli autovalori per ciascuna componente e individuiamo "il gomito", ovvero il punto nel grafico in cui la diminuzione degli autovalori rallenta. Tale punto può essere interpretato come un'indicazione del numero ottimale di componenti. Includiamo nel grafico anche due linee verticali per evidenziare i criteri della varianza cumulativa (rosso) e della Kaiser Rule (blu).
+```{r elbow}
+scree_plot <- data.frame(PC = 1:length(eigenvalues), Eigenvalue = eigenvalues)
+
+ggplot(scree_plot, aes(x = PC, y = Eigenvalue)) +
+    geom_point() +
+    geom_line() +
+    geom_vline(xintercept = variance_threshold, linetype = "dashed", color = "red") +
+    geom_vline(xintercept = kaiser_components, linetype = "dotted", color = "blue") +
+    labs(title = "Scree Plot for PCA", x = "Principal Component", y = "Eigenvalue") +
+    theme_minimal()
+```
+
+Nel grafico il gomito sembra collocarsi intorno alla quarta componente. I tre criteri danno perciò risultati differenti, per mantenere un equilibrio tra interpretabilità e preservazione della varianza, si potrebbe optare per 3 componenti.
+
+Per comprendere meglio il contributo delle variabili alle componenti principali, visualizziamo le loro coordinate e realizziamo una mappa di correlazione. Questo ci aiuta a capire come le variabili si relazionano alle componenti principali.
+```{r}
+var <- get_pca_var(pca_result)
+
+var$coord
+
+fviz_pca_var(pca_result, col.var = "contrib",
+            gradient.cols = c("#00AFBB", "#E7B800", "#FC4E07"))
+```
+Questo passaggio ci offre una visione immediata di come ogni variabile contribuisce alle componenti principali e della loro interrelazione.
+
+Approfondiamo l'analisi mostrando i contributi delle variabili attraverso diversi metodi grafici, in modo da identificare quali variabili influenzano maggiormente ciascuna componente.
+```{r}
+print(round(var$contrib,digits = 3))
+
+library("corrplot")
+corrplot(var$contrib, is.corr=FALSE)
+```
+L'analisi dei contributi evidenzia il peso relativo di ciascuna variabile nelle componenti principali, utile per interpretare i risultati della PCA.
+
+Visualizziamo i contributi delle variabili specificamente per la prima componente principale.
+```{r}
+fviz_contrib(pca_result, choice = "var", axes = 1)
+```
+Similmente al passaggio precedente, visualizziamo i contributi delle variabili per la seconda componente principale.
+```{r}
+fviz_contrib(pca_result, choice = "var", axes = 2)
+```
 
 # 3. Applicazione delle Tecniche di Clustering
 
@@ -176,17 +318,22 @@ seguiamo questi passaggi:
 
 ```{r hierarchical-clustering}
 
-# 1. Calcolo della Matrice di Distanza
-# Utilizziamo la distanza euclidea tra le prime 4 variabili numeriche
-distanze <- dist(banknote[, 2:7], method = "euclidean")
+# # 1. Calcolo della Matrice di Distanza
+# # Utilizziamo la distanza euclidea tra le prime 4 variabili numeriche
+# distanze <- dist(banknote[, 2:7], method = "euclidean")
 
-# 2. Costruzione del Dendrogramma
-# Applichiamo il clustering gerarchico agglomerativo
-clustering_hierarchico <- hclust(distanze, method = "ward.D2")
+# # 2. Costruzione del Dendrogramma
+# # Applichiamo il clustering gerarchico agglomerativo
+# clustering_hierarchico <- hclust(distanze, method = "ward.D2")
 
-# Visualizziamo il dendrogramma
-plot(clustering_hierarchico, main = "Dendrogramma del Clustering Gerarchico Agglomerativo",
-     xlab = "", sub = "", cex = 0.9)
+# # Visualizziamo il dendrogramma
+# plot(clustering_hierarchico, main = "Dendrogramma del Clustering Gerarchico Agglomerativo",
+#      xlab = "", sub = "", cex = 0.9)
+
+# res.agnes <- agnes(x = banknote,
+# stand = )
+# fviz_dend(res.agnes, cex = 0.6, k = 4)
+
 ```
 
 ### Interpretazione del Dendrogramma
@@ -196,7 +343,7 @@ numero di cluster tagliando l'albero a un'altezza che separa i gruppi in modo si
 
 #### Vantaggi:
 
-```         
+```
 Non richiede la specifica del numero di cluster a priori.
 
 Produce una rappresentazione gerarchica che può essere utile per comprendere le relazioni tra i dati.
@@ -206,10 +353,10 @@ Adatto a dataset di piccole e medie dimensioni.
 
 #### Svantaggi:
 
-```         
+```
 Sensibile alla scelta della misura di distanza e del metodo di linkage.
 
-Può essere computazionalmente costoso per dataset di grandi dimensioni.
+Può essere computazionalmente costoso per dataset di grandi dimensioni. (quello divisivo)
 
 Una volta effettuata una fusione, non è possibile separare i cluster, rendendo l'algoritmo meno flessibile in caso di errori.
 ```
