--- a/datri_lombardi_maiello.Rmd
+++ b/datri_lombardi_maiello.Rmd
@@ -572,14 +572,14 @@ Una volta effettuata una fusione, non è possibile separare i cluster, rendendo 
 
 ## 3.2.1 K-Means
 
+### 3.2.1.1 Esecuzione dell'algoritmo con tutte le variabili
+
 In questo capitolo i cluster vengono creati utilizzando l'algoritmo k-means, dopo aver scalato le variabili numeriche del dataset.
 
 ```{r}
 library(factoextra)
-df <- scale(banknote[2:7])
+df <- scale(banknote[, -1])
 ```
-
-### 3.2.1.1 Esecuzione dell'algoritmo con tutte le variabili selezionate
 
 Successivamente si determina il numero ottimale di cluster da utilizzare nell'algoritmo, impiegando il metodo Elbow.
 
@@ -589,14 +589,21 @@ fviz_nbclust(df, kmeans, method = "wss") +
   labs(subtitle = "Elbow method")
 ```
 
-E il metodo Silhouette.
+Il metodo Silhouette.
 
 ```{r}
 fviz_nbclust(df, kmeans, method = "silhouette")+
   labs(subtitle = "Silhouette method")
 ```
 
-Il primo metodo indica quattro come numero ottimale di cluster, mentre il secondo ne suggerisce due. Poiché il dataset è composto da 200 osservazioni, equamente suddivise tra banconote autentiche e contraffatte, si sceglie di impostare il numero di cluster a due e si procede con l'esecuzione dell'algoritmo.
+Ed infine la GAP analysis:
+```{r}
+set.seed(123)
+fviz_nbclust(df, kmeans, nstart = 25, method = "gap_stat", nboot = 50)+
+  labs(subtitle = "Gap statistic method")
+```
+
+Il primo metodo indica quattro come numero ottimale di cluster, il secondo ne suggerisce due mentre la gap statistic tre. Poiché il dataset è composto da 200 osservazioni, equamente suddivise tra banconote autentiche e contraffatte, si sceglie di impostare il numero di cluster a due e si procede con l'esecuzione dell'algoritmo.
 
 Per prima cosa si osserva una matrice di grafici a dispersione, utile per analizzare le relazioni tra le variabili numeriche del dataset.
 
@@ -635,9 +642,147 @@ fviz_cluster(km.res,
 )
 ```
 
+TODO: aggiungere eclust() (che utilizzare gap statistics per calcolare k)
+
 ### 3.2.1.2 Esecuzione dell'algoritmo con solamente le variabili bottom e diagonal
 
+In questo capitolo i cluster vengono creati utilizzando l'algoritmo k-means, dopo aver scalato le variabili numeriche del dataset.
+
+```{r}
+df_ridotto <- df[, c("Bottom", "Diagonal")]
+```
+
+TODO: Successivamente si determina il numero ottimale di cluster da utilizzare nell'algoritmo, impiegando il metodo Elbow.
+
+```{r}
+fviz_nbclust(df_ridotto, kmeans, method = "wss") +
+  geom_vline(xintercept = 4, linetype = 2)+
+  labs(subtitle = "Elbow method")
+```
+
+TODO: Il metodo Silhouette.
+
+```{r}
+fviz_nbclust(df_ridotto, kmeans, method = "silhouette")+
+  labs(subtitle = "Silhouette method")
+```
+
+TODO: Ed infine la GAP analysis:
+
+```{r}
+set.seed(123)
+fviz_nbclust(df_ridotto, kmeans, nstart = 25, method = "gap_stat", nboot = 500)+
+  labs(subtitle = "Gap statistic method")
+```
+
+TODO: Il primo metodo indica quattro come numero ottimale di cluster, il secondo ne suggerisce due mentre la gap statistic tre. Poiché il dataset è composto da 200 osservazioni, equamente suddivise tra banconote autentiche e contraffatte, si sceglie di impostare il numero di cluster a due e si procede con l'esecuzione dell'algoritmo.
+
+TODO: Per prima cosa si osserva una matrice di grafici a dispersione, utile per analizzare le relazioni tra le variabili numeriche del dataset.
+
+```{r}
+set.seed(123)
+km.res <- kmeans(df_ridotto, 2, nstart = 25)
+print(km.res)
+
+aggregate(banknote, by=list(cluster=km.res$cluster), mean)
+
+dd <- cbind(banknote, cluster = km.res$cluster)
+head(dd)
+
+km.res$cluster
+
+km.res$size
+
+km.res$centers
+
+cl <- km.res$cluster
+pairs(df_ridotto, gap=0, pch=cl, col=c("red", "blue")[cl])
+```
+
+TODO: commentare
+
+TODO: Ora si analizza la distribuzione dei due cluster.
+
+```{r}
+fviz_cluster(km.res, 
+             data = df_ridotto,
+             palette = c("red", "blue"),
+             ellipse.type = "euclid", 
+             star.plot = TRUE,
+             repel = TRUE,
+             ggtheme = theme_minimal()
+)
+```
+
 ### 3.2.1.3 Esecuzione dell'algoritmo con solamente le variabili scelte tramite la PCA
+
+In questo capitolo i cluster vengono creati utilizzando l'algoritmo k-means, dopo aver scalato le variabili numeriche del dataset.
+
+```{r}
+df_pca <- scale(banknote_pca[, -1])
+```
+
+TODO: Successivamente si determina il numero ottimale di cluster da utilizzare nell'algoritmo, impiegando il metodo Elbow.
+
+```{r}
+fviz_nbclust(df_pca, kmeans, method = "wss") +
+  geom_vline(xintercept = 4, linetype = 2)+
+  labs(subtitle = "Elbow method")
+```
+
+TODO: Il metodo Silhouette.
+
+```{r}
+fviz_nbclust(df_pca, kmeans, method = "silhouette")+
+  labs(subtitle = "Silhouette method")
+```
+
+TODO: Ed infine la GAP analysis:
+
+```{r}
+set.seed(123)
+fviz_nbclust(df_pca, kmeans, nstart = 25, method = "gap_stat", nboot = 500)+
+  labs(subtitle = "Gap statistic method")
+```
+
+TODO: Il primo metodo indica quattro come numero ottimale di cluster, il secondo ne suggerisce due mentre la gap statistic tre. Poiché il dataset è composto da 200 osservazioni, equamente suddivise tra banconote autentiche e contraffatte, si sceglie di impostare il numero di cluster a due e si procede con l'esecuzione dell'algoritmo.
+
+TODO: Per prima cosa si osserva una matrice di grafici a dispersione, utile per analizzare le relazioni tra le variabili numeriche del dataset.
+
+```{r}
+set.seed(123)
+km.res <- kmeans(df_pca, 2, nstart = 25)
+print(km.res)
+
+aggregate(banknote, by=list(cluster=km.res$cluster), mean)
+
+dd <- cbind(banknote, cluster = km.res$cluster)
+head(dd)
+
+km.res$cluster
+
+km.res$size
+
+km.res$centers
+
+cl <- km.res$cluster
+pairs(df_ridotto, gap=0, pch=cl, col=c("red", "blue")[cl])
+```
+
+TODO: commentare
+
+TODO: Ora si analizza la distribuzione dei due cluster.
+
+```{r}
+fviz_cluster(km.res, 
+             data = df_pca,
+             palette = c("red", "blue"),
+             ellipse.type = "euclid", 
+             star.plot = TRUE,
+             repel = TRUE,
+             ggtheme = theme_minimal()
+)
+```
 
 ## 3.2.2 K-Medoids 
 
@@ -648,6 +793,7 @@ In questo capitolo i cluster vengono creati utilizzando l'algoritmo k-medoids co
 Come in precedenza, si analizzano prima i grafici a dispersione e successivamente i due cluster.
 
 ```{r}
+library(cluster)
 head(df, n = 3)
 
 pam.res <- pam(df, 2)
@@ -677,7 +823,61 @@ fviz_cluster(pam.res,
 
 ### 3.2.2.2 Esecuzione dell'algoritmo con solamente le variabili bottom e diagonal
 
+```{r}
+df_ridotto <- df[, c("Bottom", "Diagonal")]
+pam.res <- pam(df_ridotto, 2)
+print(pam.res)
+
+dd <- cbind(banknote, cluster = pam.res$cluster)
+head(dd, n = 8)
+
+pam.res$medoids
+
+head(pam.res$clustering)
+
+cl <- pam.res$clustering
+pairs(df, gap=0, pch=cl, col=c("#00AFBB", "#FC4E07")[cl])
+```
+
+Come previsto, i cluster risultano molto simili.
+
+```{r}
+fviz_cluster(pam.res,
+             palette = c("#00AFBB", "#FC4E07"),
+             ellipse.type = "t",
+             repel = TRUE,
+             ggtheme = theme_classic()
+)
+```
+
 ### 3.2.2.3 Esecuzione dell'algoritmo con solamente le variabili scelte tramite la PCA
+
+```{r}
+df_pca <- scale(banknote_pca[, -1])
+pam.res <- pam(df_pca, 2)
+print(pam.res)
+
+dd <- cbind(banknote, cluster = pam.res$cluster)
+head(dd, n = 8)
+
+pam.res$medoids
+
+head(pam.res$clustering)
+
+cl <- pam.res$clustering
+pairs(df, gap=0, pch=cl, col=c("#00AFBB", "#FC4E07")[cl])
+```
+
+Come previsto, i cluster risultano molto simili.
+
+```{r}
+fviz_cluster(pam.res,
+             palette = c("#00AFBB", "#FC4E07"),
+             ellipse.type = "t",
+             repel = TRUE,
+             ggtheme = theme_classic()
+)
+```
 
 ## 3.1.4 Misture di Gaussiane
 
